--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start:dev": "webpack-dev-server"
   },
   "devDependencies": {
+    "@types/flux": "3.1.7",
     "@types/react": "16.1.0",
-    "@types/react-dom": "^16.0.4",
+    "@types/react-dom": "16.0.4",
+    "flux": "3.1.3",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "ts-loader": "4.4.2",
